<?xml version="1.0" encoding="utf-8"?>
<!--
  The MIT License (MIT)
  Copyright © 2016 Steve Guidetti

  Permission is hereby granted, free of charge, to any person obtaining a copy
  of this software and associated documentation files (the “Software”), to deal
  in the Software without restriction, including without limitation the rights
  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  copies of the Software, and to permit persons to whom the Software is
  furnished to do so, subject to the following conditions:

  The above copyright notice and this permission notice shall be included in
  all copies or substantial portions of the Software.

  THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  THE SOFTWARE.
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow style="@style/TableRow.Odd">

                    <TextView
                        style="@style/ElementDetails.Label"
                        android:labelFor="@+id/number"
                        android:text="@string/labelNumber" />

                    <TextView
                        android:id="@+id/number"
                        style="@style/ElementDetails.Value" />
                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        style="@style/ElementDetails.Label"
                        android:labelFor="@+id/symbol"
                        android:text="@string/labelSymbol" />

                    <TextView
                        android:id="@+id/symbol"
                        style="@style/ElementDetails.Value" />
                </TableRow>

                <TableRow style="@style/TableRow.Odd">

                    <TextView
                        style="@style/ElementDetails.Label"
                        android:labelFor="@+id/name"
                        android:text="@string/labelName" />

                    <TextView
                        android:id="@+id/name"
                        style="@style/ElementDetails.Value" />
                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        style="@style/ElementDetails.Label"
                        android:labelFor="@+id/weight"
                        android:text="@string/labelWeight" />

                    <TextView
                        android:id="@+id/weight"
                        style="@style/ElementDetails.Value" />
                </TableRow>

                <TableRow style="@style/TableRow.Odd">

                    <TextView
                        style="@style/ElementDetails.Label"
                        android:labelFor="@+id/category"
                        android:text="@string/labelCategory" />

                    <TextView
                        android:id="@+id/category"
                        style="@style/ElementDetails.Value" />
                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        style="@style/ElementDetails.Label"
                        android:text="@string/labelGPB" />

                    <TextView
                        android:id="@+id/gpb"
                        style="@style/ElementDetails.Value" />
                </TableRow>

                <TableRow style="@style/TableRow.Odd">

                    <TextView
                        style="@style/ElementDetails.Label"
                        android:labelFor="@+id/config"
                        android:text="@string/labelConfiguration" />

                    <TextView
                        android:id="@+id/config"
                        style="@style/ElementDetails.Value" />
                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        style="@style/ElementDetails.Label"
                        android:labelFor="@+id/electrons"
                        android:text="@string/labelElectrons" />

                    <TextView
                        android:id="@+id/electrons"
                        style="@style/ElementDetails.Value" />
                </TableRow>

                <TableRow style="@style/TableRow.Odd">

                    <TextView
                        style="@style/ElementDetails.Label"
                        android:labelFor="@+id/density"
                        android:text="@string/labelDensity" />

                    <TextView
                        android:id="@+id/density"
                        style="@style/ElementDetails.Value" />
                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        style="@style/ElementDetails.Label"
                        android:labelFor="@+id/melt"
                        android:text="@string/labelMelt" />

                    <TextView
                        android:id="@+id/melt"
                        style="@style/ElementDetails.Value" />
                </TableRow>

                <TableRow style="@style/TableRow.Odd">

                    <TextView
                        style="@style/ElementDetails.Label"
                        android:labelFor="@+id/boil"
                        android:text="@string/labelBoil" />

                    <TextView
                        android:id="@+id/boil"
                        style="@style/ElementDetails.Value" />
                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        style="@style/ElementDetails.Label"
                        android:labelFor="@+id/heat"
                        android:text="@string/labelHeat" />

                    <TextView
                        android:id="@+id/heat"
                        style="@style/ElementDetails.Value" />
                </TableRow>

                <TableRow style="@style/TableRow.Odd">

                    <TextView
                        style="@style/ElementDetails.Label"
                        android:labelFor="@+id/negativity"
                        android:text="@string/labelNegativity" />

                    <TextView
                        android:id="@+id/negativity"
                        style="@style/ElementDetails.Value" />
                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        style="@style/ElementDetails.Label"
                        android:labelFor="@+id/abundance"
                        android:text="@string/labelAbundance" />

                    <TextView
                        android:id="@+id/abundance"
                        style="@style/ElementDetails.Value" />
                </TableRow>
            </TableLayout>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="12dp" />

            <TextView
                style="@style/ElementDetails.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/labelIsotopes" />

            <TableLayout
                android:id="@+id/isoTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TableRow tools:ignore="UselessParent">

                    <TextView
                        style="@android:style/TextAppearance.Small"
                        android:gravity="center"
                        android:text="@string/labelSymbol" />

                    <android.support.v4.widget.Space android:layout_width="12dp" />

                    <TextView
                        style="@android:style/TextAppearance.Small"
                        android:gravity="center"
                        android:text="@string/labelWeight" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </HorizontalScrollView>
</ScrollView>
